tests/baseline_outputs/fifty_indicators_before_changes.summary.txt
timestamp: 2026-04-23T08:05:33.836438
success: False
error: TypeError: Object of type Timestamp is not JSON serializable
Traceback (most recent call last):
  File "<stdin>", line 32, in <module>
  File "/home/lucio/.pyenv/versions/3.11.14/lib/python3.11/json/__init__.py", line 238, in dumps
    **kw).encode(obj)
          ^^^^^^^^^^^
  File "/home/lucio/.pyenv/versions/3.11.14/lib/python3.11/json/encoder.py", line 202, in encode
    chunks = list(chunks)
             ^^^^^^^^^^^^
  File "/home/lucio/.pyenv/versions/3.11.14/lib/python3.11/json/encoder.py", line 432, in _iterencode
    yield from _iterencode_dict(o, _current_indent_level)
  File "/home/lucio/.pyenv/versions/3.11.14/lib/python3.11/json/encoder.py", line 406, in _iterencode_dict
    yield from chunks
  File "/home/lucio/.pyenv/versions/3.11.14/lib/python3.11/json/encoder.py", line 406, in _iterencode_dict
    yield from chunks
  File "/home/lucio/.pyenv/versions/3.11.14/lib/python3.11/json/encoder.py", line 326, in _iterencode_list
    yield from chunks
  File "/home/lucio/.pyenv/versions/3.11.14/lib/python3.11/json/encoder.py", line 439, in _iterencode
    o = _default(o)
        ^^^^^^^^^^^
  File "/home/lucio/.pyenv/versions/3.11.14/lib/python3.11/json/encoder.py", line 180, in default
    raise TypeError(f'Object of type {o.__class__.__name__} '
TypeError: Object of type Timestamp is not JSON serializable

